Implementa gerenciamento de transações